--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.0",
     "@tailwindcss/vite": "^4.0.3",
     "axios": "^1.7.9",
-    "framer-motion": "^12.0.6",
+    "framer-motion": "^12.4.1",
     "lucide-react": "^0.474.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "tailwindcss": "^4.0.3"
+    "react-router-dom": "^7.1.5",
+    "tailwindcss": "^4.0.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
