--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.0.3",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.9",
+    "firebase": "^11.3.0",
     "framer-motion": "^12.0.6",
     "lucide-react": "^0.474.0",
     "postcss": "^8.5.1",
