--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "axios": "^1.7.9",
     "firebase": "^11.3.0",
     "framer-motion": "^12.0.6",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.2",
     "lucide-react": "^0.474.0",
     "postcss": "^8.5.1",
     "react": "^18.3.1",
