--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@tailwindcss/vite": "^4.0.3",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.9",
-    "firebase": "^11.3.0",
+    "dotenv": "^16.4.7",
+    "firebase": "^11.3.1",
     "framer-motion": "^12.0.6",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.2",
@@ -23,7 +24,8 @@
     "react-dom": "^18.3.1",
     "react-markdown": "^9.0.3",
     "react-router-dom": "^7.1.5",
-    "tailwindcss": "^4.0.3"
+    "tailwindcss": "^4.0.3",
+    "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
