--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.4.7",
     "firebase": "^11.3.1",
     "framer-motion": "^12.0.6",
+    "gsap": "^3.12.7",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.2",
     "lucide-react": "^0.474.0",
