--- a/package.json
+++ b/package.json
@@ -12,20 +12,25 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.0.3",
     "autoprefixer": "^10.4.20",
-    "axios": "^1.7.9",
+    "axios": "^1.9.0",
     "dotenv": "^16.4.7",
     "firebase": "^11.3.1",
     "framer-motion": "^12.0.6",
     "gsap": "^3.12.7",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.2",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.474.0",
     "postcss": "^8.5.1",
     "react": "^18.3.1",
+    "react-confetti": "^6.4.0",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.3.8",
     "react-markdown": "^9.0.3",
-    "react-router-dom": "^7.1.5",
-    "tailwindcss": "^4.0.3",
+    "react-router-dom": "^7.6.0",
+    "react-toastify": "^11.0.5",
+    "react-tooltip": "^5.28.1",
+    "tailwindcss": "^4.1.7",
     "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
