--- a/server/package.json
+++ b/server/package.json
@@ -12,13 +12,17 @@
   "description": "",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
+    "dotenv": "^16.5.0",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.10.0",
+    "mongoose": "^8.15.0",
+    "multer": "^2.0.0",
     "nodemailer": "^6.10.0",
+    "nodemon": "^3.1.10",
+    "sanitize-html": "^2.17.0",
     "uuid": "^11.0.5"
   }
 }
